NLP model training

--- a/Model_training/model_training.ipynb
+++ b/Model_training/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,10 +10,20 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from textblob import TextBlob\n",
-    "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix\n",
+    "import re\n",
+    "import nltk\n",
+    "# nltk.download('stopwords')\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from sklearn.metrics import accuracy_score, f1_score, confusion_matrix, precision_score, recall_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns"
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n"
    ]
   },
   {
@@ -462,41 +472,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df.drop(['Sentiments', 'New_Sentiments'], axis=1)\n",
-    "y = df['New_Sentiments']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(454270, 5)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def acc_call(y_test, y_pred):\n",
+    "    \n",
+    "    # Calculating accuracy\n",
+    "    acc_score = round(accuracy_score(y_test, y_pred)*100, 2)\n",
+    "    f_one_score = round(f1_score(y_test, y_pred, average='weighted')*100, 2)\n",
+    "    acc_dict = {'Acc_Score': acc_score, 'F1_Score': f_one_score}\n",
+    "    \n",
+    "    return acc_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def con_mat_call(y_test, y_pred):\n",
+    "    \n",
+    "    # Creating confusion matrix\n",
+    "    unique_label = np.unique([y_test, y_pred])\n",
+    "    cmtx = pd.DataFrame(\n",
+    "        confusion_matrix(y_test, y_pred, labels=unique_label), \n",
+    "        index=['true:{:}'.format(x) for x in unique_label], \n",
+    "        columns=['pred:{:}'.format(x) for x in unique_label]\n",
+    "    )\n",
+    "    \n",
+    "    return sns.heatmap(cmtx, cbar=False, annot=True, fmt='.2f')"
    ]
   },
   {
@@ -520,21 +534,9 @@
     "        else:\n",
     "            sentiments.append(0)\n",
     "    \n",
-    "    # Calculating accuracy\n",
-    "    acc_score = round(accuracy_score(dataframe['New_Sentiments'], sentiments)*100, 2)\n",
-    "    f_one_score = round(f1_score(dataframe['New_Sentiments'], sentiments, average='weighted')*100, 2)\n",
-    "    acc_dict = {'Acc_score': acc_score, 'F1_score': f_one_score}\n",
-    "    print(acc_dict)\n",
+    "    print(acc_call(dataframe['New_Sentiments'], sentiments))\n",
     "    \n",
-    "    # Creating confusion matrix\n",
-    "    unique_label = np.unique([dataframe['New_Sentiments'], sentiments])\n",
-    "    cmtx = pd.DataFrame(\n",
-    "        confusion_matrix(dataframe['New_Sentiments'], sentiments, labels=unique_label), \n",
-    "        index=['true:{:}'.format(x) for x in unique_label], \n",
-    "        columns=['pred:{:}'.format(x) for x in unique_label]\n",
-    "    )\n",
-    "    \n",
-    "    return sns.heatmap(cmtx, cbar=False, annot=True, fmt='.2f')"
+    "    return con_mat_call(dataframe['New_Sentiments'], sentiments)"
    ]
   },
   {
@@ -565,6 +567,245 @@
    ],
    "source": [
     "print(train_textblob(df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step-2\n",
+    "    model training through nlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenization; process for creation of bag of words model.\n",
+    "\n",
+    "corpus = []\n",
+    "for i in range(0, 648958):\n",
+    "    review = re.sub('[^a-zA-Z]', ' ', df['Regenerated_Text'][i])\n",
+    "    review = review.split()\n",
+    "    \n",
+    "    # The Porter stemming is used for removing the commoner\n",
+    "    # morphological and inflexional endings from words in English.\n",
+    "    ps = PorterStemmer()\n",
+    "    \n",
+    "    # Stopwords is a process of removing unnecessary english words\n",
+    "    # that are not took part in npl tasks.\n",
+    "    review = [ps.stem(word) for word in review if not word in set(stopwords.words('english'))]\n",
+    "    review = ' '.join(review)\n",
+    "    corpus.append(review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "648958"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the Bag of Words model\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "cv = CountVectorizer(max_features=99500)\n",
+    "X = cv.fit_transform(corpus)\n",
+    "y = df.New_Sentiments.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_shape-->(648958, 99500)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'X_shape-->{X.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_shape-->(454270, 99500); X_test_shape-->(194688, 99500)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, shuffle=False)\n",
+    "print(f'X_train_shape-->{X_train.shape}; X_test_shape-->{X_test.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checking_models(X_train, X_test, y_train, y_test):\n",
+    "    '''This function is used to check accuracy on different models of nlp'''\n",
+    "    \n",
+    "    # Fitting and predicting logistic regression to the Training set.\n",
+    "    logreg_classifier = LogisticRegression()\n",
+    "    logreg_classifier.fit(X_train, y_train)\n",
+    "    y_pred_logreg_test = logreg_classifier.predict(X_test)\n",
+    "    y_pred_logreg_train = logreg_classifier.predict(X_train)\n",
+    "    \n",
+    "    # Fitting and predicting Naive Bayes to the Training set.\n",
+    "    nv_classifier = MultinomialNB()\n",
+    "    nv_classifier.fit(X_train, y_train)\n",
+    "    y_pred_nv_test = nv_classifier.predict(X_test)\n",
+    "    y_pred_nv_train = nv_classifier.predict(X_train)\n",
+    "\n",
+    "    # Fitting and predicting Decision Tree to Training set.\n",
+    "    tree_classifier = DecisionTreeClassifier()\n",
+    "    tree_classifier.fit(X_train, y_train)\n",
+    "    y_pred_tree_test = tree_classifier.predict(X_test)\n",
+    "    y_pred_tree_train = tree_classifier.predict(X_train)\n",
+    "    \n",
+    "    # Fitting and predicting Random forest to Training set.\n",
+    "    ran_classifier = RandomForestClassifier()\n",
+    "    ran_classifier.fit(X_train, y_train)\n",
+    "    y_pred_ran_test = ran_classifier.predict(X_test)\n",
+    "    y_pred_ran_train = ran_classifier.predict(X_train)\n",
+    "    \n",
+    "    # Accuracy details.\n",
+    "    logreg_train_acc = acc_call(y_train, y_pred_logreg_train)\n",
+    "    logreg_test_acc = acc_call(y_test, y_pred_logreg_test)\n",
+    "    \n",
+    "    nv_train_acc = acc_call(y_train, y_pred_nv_train)\n",
+    "    nv_test_acc = acc_call(y_test, y_pred_nv_test)\n",
+    "    \n",
+    "    tree_train_acc = acc_call(y_train, y_pred_tree_train)\n",
+    "    tree_test_acc = acc_call(y_test, y_pred_tree_test)\n",
+    "    \n",
+    "    ran_train_acc = acc_call(y_train, y_pred_ran_train)\n",
+    "    ran_test_acc = acc_call(y_test, y_pred_ran_test)\n",
+    "    \n",
+    "    training_dict = {'Logistic Regression': logreg_train_acc,\n",
+    "                     'Naive Bayes': nv_train_acc,\n",
+    "                     'Decision Tree': tree_train_acc,\n",
+    "                     'Random Forest': ran_train_acc\n",
+    "                    }\n",
+    "    \n",
+    "    test_dict = {'Logistic Regression': logreg_test_acc,\n",
+    "                 'Naive Bayes': nv_test_acc,\n",
+    "                 'Decision Tree': tree_test_acc,\n",
+    "                 'Random Forest': ran_test_acc\n",
+    "                }\n",
+    "    \n",
+    "    print(f'Accuracy Checking for training data:- {training_dict}')\n",
+    "    print(f'Accuracy Checking for test data:- {test_dict}')\n",
+    "    \n",
+    "    # Returning dictionary of every prediction file for later use.\n",
+    "    pred_dict = {'Logistic_Regression_pred': [y_pred_logreg_train, y_pred_logreg_test],\n",
+    "                 'Naive_Bayes_pred': [y_pred_nv_train, y_pred_nv_test],\n",
+    "                 'Decision_Tree_pred': [y_pred_tree_train, y_pred_tree_test],\n",
+    "                 'Random_Forest_pred': [y_pred_ran_train, y_pred_ran_test]\n",
+    "                }\n",
+    "    \n",
+    "    return pred_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\LENOVO\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "C:\\Users\\LENOVO\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:469: FutureWarning: Default multi_class will be changed to 'auto' in 0.22. Specify the multi_class option to silence this warning.\n",
+      "  \"this warning.\", FutureWarning)\n",
+      "C:\\Users\\LENOVO\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Checking for training data:- {'Logistic Regression': {'Acc_Score': 91.38, 'F1_Score': 91.33}, 'Naive Bayes': {'Acc_Score': 83.08, 'F1_Score': 83.07}, 'Decision Tree': {'Acc_Score': 98.28, 'F1_Score': 98.28}, 'Random Forest': {'Acc_Score': 98.08, 'F1_Score': 98.08}}\n",
+      "Accuracy Checking for test data:- {'Logistic Regression': {'Acc_Score': 88.22, 'F1_Score': 88.1}, 'Naive Bayes': {'Acc_Score': 79.31, 'F1_Score': 79.19}, 'Decision Tree': {'Acc_Score': 97.71, 'F1_Score': 97.71}, 'Random Forest': {'Acc_Score': 97.25, 'F1_Score': 97.26}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_dict = checking_models(X_train, X_test, y_train, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([ 0,  0,  1, ..., -1,  0,  0], dtype=int64), array([0, 0, 1, ..., 1, 1, 0], dtype=int64)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(all_dict['Random_Forest_pred'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Acc_Score': 97.25, 'F1_Score': 97.26}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = all_dict['Random_Forest_pred'][1]\n",
+    "acc_call(y_test, y_pred)"
    ]
   },
   {
